# clip-for-me

./: .gitignore  LICENSE  README.md  cli.py  clipHighlights.py  parseHighlights.py  pyproject.toml  requirements.txt  setup.py  utils.py
ClipForMe/: __init__.py  clipHighlights.py  constants.py  errors.py  utils.py
examples/: example.json  example.md
src/clip_for_me/: __init__.py  cli.py  clipHighlights.py  clip_highlights.py  utils.py
